# xmi-schema

./: .gitignore  README.md  install_package.sh  pyproject.toml  pyproject.toml.old  requirements-windows.txt  requirements.txt  setup.py  setup_and_install.bat
.github/workflows/: python-publish.yml
after_install_tests/xmi/v1/test_scripts/: test_xmi_manager.py
cross_model_information.egg-info/: PKG-INFO  SOURCES.txt
crossmodelinformation.egg-info/: PKG-INFO  SOURCES.txt
schema/: __init__.py
src/xmi/: __init__.py  myfunctions.py
src/xmi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xmi/v1/: __init__.py  xmi_base.py  xmi_enums.py  xmi_errors.py  xmi_file.py  xmi_manager.py  xmi_manager_v2.py  xmi_model.py  xmi_parser.py  xmi_structural_cross_section.py  xmi_structural_curve_member.py  xmi_structural_material.py  xmi_structural_point_connection.py  xmi_structural_surface_member.py  xmi_structural_unit.py  xmi_utilities.py
src/xmi/v1/entities/: __init__.py  xmi_base_entity.py  xmi_segment.py  xmi_structural_cross_section.py  xmi_structural_curve_member.py  xmi_structural_material.py  xmi_structural_point_connection.py  xmi_structural_segment.py  xmi_structural_surface_member.py  xmi_structural_unit.py
src/xmi/v1/enums/: __init__.py  xmi_enums.py  xmi_shape_enums.py  xmi_structural_cross_section_enums.py  xmi_structural_curve_member_enums.py  xmi_structural_material_enums.py  xmi_structural_surface_member_enums.py
src/xmi/v1/shapes/: xmi_shape.py
src/xmi_schema/v1/: constants.py  xmi_base.py  xmi_errors.py
tests/: test_myfunctions.py
tests/xmi/v1/: test_xmi_parser.py  test_xmi_parser_structural_material_only.json
xmi_schema.egg-info/: PKG-INFO  SOURCES.txt
xmischema.egg-info/: PKG-INFO  SOURCES.txt
(+49 files in other folders)
