[project]
name = "xmi"
version = "0.2.0"
description = "Used to intepret XMI Schema"
authors = [
    {name = "darellchua",email = "darellchua2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[project.urls]
"Homepage" = "https://github.com/darellchua2/xmi-schema"
"Bug Tracker" = "https://github.com/darellchua2/xmi-schema/issues"
